plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.netflix.dgs.codegen' version '7.0.3'
    id 'org.hibernate.orm' version '6.6.8.Final'
    id 'org.graalvm.buildtools.native' version '0.10.5'
}

group = 'com.example'
version = 'docker'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springModulithVersion', "1.3.1")
    seleniumVersion = "4.39.0"
}

dependencies {
    implementation 'com.itextpdf:itextpdf:5.5.13.4'
    implementation 'org.apache.pdfbox:pdfbox:3.0.5'
    implementation 'com.github.librepdf:openpdf:1.3.30'
    // https://mvnrepository.com/artifact/com.github.albfernandez/juniversalchardet
    // https://mvnrepository.com/artifact/com.ibm.icu/icu4j
    implementation "org.seleniumhq.selenium:selenium-java:${seleniumVersion}"
    implementation "org.seleniumhq.selenium:selenium-chrome-driver:${seleniumVersion}"
    implementation "org.seleniumhq.selenium:selenium-devtools-v143:${seleniumVersion}"
//    implementation("org.seleniumhq.selenium:selenium-java:4.31.0")
    implementation 'io.github.bonigarcia:webdrivermanager:6.1.0'
    // WebDriver для Chrome
    // https://mvnrepository.com/artifact/org.jfree/jfreechart
    implementation("org.jfree:jfreechart:1.5.5")
    //   implementation("org.seleniumhq.selenium:selenium-chrome-driver:4.31.0")
    implementation("com.ibm.icu:icu4j:77.1")
    implementation("com.github.albfernandez:juniversalchardet:2.5.0")
    implementation("org.jsoup:jsoup:1.19.1")
    //   implementation "org.seleniumhq.selenium:selenium-devtools-v143:${seleniumVersion}"
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
    implementation 'com.nimbusds:nimbus-jose-jwt:9.37.3'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation('org.springframework.security:spring-security-test')
    implementation("org.springframework.boot:spring-boot-starter-jdbc")
    implementation("com.h2database:h2:1.4.191")
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    /*  implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'*/
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.modulith:spring-modulith-starter-core'
    implementation 'org.springframework.modulith:spring-modulith-starter-jdbc'
    implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
    runtimeOnly 'org.postgresql:postgresql'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework:spring-webflux'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    //implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // https://mvnrepository.com/artifact/org.mockito/mockito-core
    testImplementation("org.mockito:mockito-core:5.17.0")
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
    }
}

//generateJava {
//    schemaPaths = ["${projectDir}/src/main/resources/graphql-client"]
//    packageName = 'com.example.companyreputationmanagment.codegen'
//    generateClient = true
//}

hibernate {
    enhancement {
        enableAssociationManagement = true
    }
}


tasks.named('test') {
    useJUnitPlatform()
}
